--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
       <div id="result" class="hide"></div>
     </div>
   </div>
+ <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
+  <!-- ✅ Then load your script.js -->
   <script src="script.js"></script>
+
+ 
+ 
+
 </body>
 </html>
